# Exploring-Machine-Learning

./: .pre-commit-config.yaml  README.md  pyproject.toml
Classification/: Logistic Regression.ipynb
Decision Tree/: Explanations.ipynb  funcs.py
Dimensionality Reduction/Principal Component Analysis (PCA)/: Principal Component Analysis.ipynb  visualization.py
Regression/: Linear Regressions.ipynb
