[project]
name = "exploring-machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipympl>=0.10.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.9",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-per-file-ignores = { "*.ipynb" = [
    "E402",  # imports not at top of "file" (cell order)
    "E501",  # long lines in notebook outputs / markdown-adjacent cells
] }

[tool.ruff.format]
docstring-code-format = true
